test/mutation_analysis/s0198_house_robber/hafis/o3/mutants/16/result.txt
./test/mutation_analysis/s0198_house_robber/hafis/o3/mutants/16/Solution.java:31: error: unreachable statement
        for (int i = 2; false; i++) {
                                    ^
1 error
